--- a/css/style.css
+++ b/css/style.css
@@ -74,5 +74,36 @@
 .navegacao {
     background: #F24405;
     height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+.menu {
+    text-decoration: none;
+    display: flex;
+}
+
+.menu a {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-size: 12px;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: white;
+}
+
+
+.lista-menu {
+    list-style-type: none;
+}
+
+.lista-menu:nth-child(n+2) {
+    margin-left: 80px;
+}
+
+.carousel-inner > .carousel-item > img {
+    width: 100%;
+}
+
 
