--- a/WebSiteFloricultura/css/style.css
+++ b/WebSiteFloricultura/css/style.css
@@ -121,7 +121,7 @@
     margin-left: 20px;
     margin-right: 20px;
     margin-bottom: 10px;
-    height: 300px;
+    height: 350px;
     border: 1px solid rgba(242, 68, 5, 0.33);
 }
 
@@ -176,12 +176,65 @@
 }
 
 .card {
-    width: 305px;
-    height: 250px;  
+    width: 250px;
+    height: 300px;  
     margin-right: 20px;
     background: #F5E8E8;
     border: 2px solid #F2F2F2;
     border-radius: 10px;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-size: 12px;
+}
+
+.card img {
+    overflow: hidden;
+    height: 130px;
+}
+
+.card-title {
+    text-transform: uppercase;
+    text-align: center;
+}
+
+.card-preco {
+    margin-bottom: 5px;
+}
+
+.card-descricao {
+    text-align: justify;
+}
+
+.card-botoes {
+    display: flex;
+    justify-content: space-evenly;
+    padding-top: 10px;
+}
+.card-botaoIcone, .card-botaoComprar {
+    border-radius: 10px;
+    border: none;
+}
+
+.card-botaoIcone {
+    background-color: #F27405;
+    width: 60px;
+}
+
+.card-botaoIcone img {
+    width: 24px;
+    height: 24px;
+    background-color: #F27405;
+}
+
+.card-botaoComprar {
+    background-color: #F24405;
+    width: 110px;
+    height: 28px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-size: 12px;
+    text-transform: uppercase;
+    color: white;
 }
 
 .rodape {
