--- a/WebSiteFloricultura/css/style.css
+++ b/WebSiteFloricultura/css/style.css
@@ -1,255 +1,6 @@
-.cabecalho {
-    background-color: #F2F2F2;
-    height: 70px;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-}
-.cabecalho img {
-    width: 70px;
-    height: 66px;
-}
-
-.cabecalho h1 {
-    font-family: 'Federo';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 24px;
-    line-height: 28px;
-    text-transform: uppercase;
-    color: #F24405;
-}
-
-.inputPesquisar {
-    background-color:transparent;
-    border:solid 1px rgba(0, 0, 0, 0.53);
-    width: 200px;
-    height: 32px;
-    display: flex;
-    justify-content: space-between;
-}
-
-#txtPesquisa {
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-size: 12px;
-    line-height: 20px;
-    text-align: center;
-}
-.caixaBotao {
-    width: 49px;
-    height: 30px;
-    background-color: #F24405;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-left: solid 1px rgba(0, 0, 0, 0.53);
-    cursor: pointer;
-}
-
-#btnPesquisa {
-    width: 24px;
-    height: 24px;
-}
-
-.botaoLogin, .botaoCadastro{
-    border-radius: 20px;
-    border: none;
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 600;
-    font-size: 12px;
-    line-height: 17px;
-    text-transform: uppercase;
-    color: white;
-    width: 140px;
-    height: 25px;
-}
-
-.botaoLogin {
-    background-color: #F29F05;
-}
-
-.botaoCadastro {
-    background-color: #F24405;;
-}
-
-.navegacao {
-    background: #F24405;
-    height: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.menu {
-    text-decoration: none;
-    display: flex;
-}
-
-.lista-menu a {
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-size: 14px;
-    text-transform: uppercase;
-    text-decoration: none;
-    color: white;
-}
-
-
-.lista-menu {
-    list-style-type: none;
-}
-
-.lista-menu:nth-child(n+2) {
-    margin-left: 80px;
-}
-
-.lista-menu a:hover {
-    color: #F24405;
-    font-style: bold;
-    background-color: white;
-    border-radius: 4px;
-}
-
-.carousel-inner > .carousel-item > img {
-    width: 100%;
-}
-
-.secao-destaques, .secao-promocao {
-    margin-top: 30px;
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-bottom: 10px;
-    height: 350px;
-    border: 1px solid rgba(242, 68, 5, 0.33);
-}
-
-.destaques-menu, .promocao-menu {
-    height: 30px;
-    border-bottom: 1px solid rgba(242, 68, 5, 0.33);
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.destaques-menu p, .promocao-menu p{
-    font-family: 'Gentium Book Basic';
-    font-style: normal;
-    font-size: 16px;
-    line-height: 28px;
-    margin-left: 20px;
-    text-transform: uppercase;
-    color:#FC841A;
-}
-
-.destaques-menu  ul a, .promocao-menu ul a {
-    text-decoration: none;
-}
-
-.lista-destaques-menu, .lista-promocao-menu {
-    display:inline-block;
-    margin-right: 2px;
-}
-
-.lista-destaques-menu:nth-child(3), .lista-promocao-menu:nth-child(3){
-    margin-right: 20px;
-}
-
-
-.lista-destaques-menu a, .lista-promocao-menu a {
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-size: 10px;
-    line-height: 28px;
-    text-transform: uppercase;
-    color:#FC841A;
-    padding-right: 6px;
-    border-right: 1px solid rgba(0, 0, 0, 0.44);
-   
-
-}
-
-.lista-destaques-menu a:hover, .lista-promocao-menu a:hover {
-    color: #F24405;
-    text-decoration: underline #F24405;
-}
-
-.card {
-    width: 250px;
-    height: 300px;  
-    margin-right: 20px;
-    background: #F5E8E8;
-    border: 2px solid #F2F2F2;
-    border-radius: 10px;
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-size: 12px;
-}
-
-.card img {
-    overflow: hidden;
-    height: 130px;
-}
-
-.card-title {
-    text-transform: uppercase;
-    text-align: center;
-}
-
-.card-preco {
-    margin-bottom: 5px;
-}
-
-.card-descricao {
-    text-align: justify;
-}
-
-.card-botoes {
-    display: flex;
-    justify-content: space-evenly;
-    padding-top: 10px;
-}
-.card-botaoCarrinho, .card-botaoComprar {
-    border-radius: 10px;
-    border: none;
-}
-
-.card-botaoCarrinho {
-    background-color: #F27405;
-    width: 60px;
-}
-
-.card-botaoCarrinho img {
-    width: 24px;
-    height: 24px;
-    background-color: #F27405;
-}
-
-.card-botaoComprar {
-    background-color: #F24405;
-    width: 100px;
-    height: 28px;
-    font-family: 'Inter';
-    font-style: normal;
-    font-size: 12px;
-    text-transform: uppercase;
-    color: white;
-}
-
-.rodape {
-    background-color: #F24405;
-    height: 130px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.icones-rodape {
-    width: 24px;
-    
-}
-
-.icones-rodape:nth-child(1), .icones-rodape:nth-child(2){
-    margin-right: 10px;
-}
+/* Importando todos os css */
+@import url(header.css);
+@import url(navegacao.css);
+@import url(carousel.css);
+@import url(secaoPrincipal.css);
+@import url(rodape.css);
