--- a/WebSiteFloricultura/css/header.css
+++ b/WebSiteFloricultura/css/header.css
@@ -18,12 +18,17 @@
     line-height: 28px;
     text-transform: uppercase;
     color: #F24405;
+    margin-left: 30px;
 }
 
+.logo {
+    display: flex;
+    align-items: center;
+}
 .inputPesquisar {
     background-color:transparent;
     border:solid 1px rgba(0, 0, 0, 0.53);
-    width: 200px;
+    width: 300px;
     height: 32px;
     display: flex;
     justify-content: space-between;
@@ -68,6 +73,7 @@
 
 .botaoLogin {
     background-color: #F29F05;
+    margin-right: 30px;
 }
 
 .botaoCadastro {
