--- a/WebSiteFloricultura/css/secaoPrincipal.css
+++ b/WebSiteFloricultura/css/secaoPrincipal.css
@@ -1,4 +1,4 @@
-.secao-destaques, .secao-promocao {
+.secao-promocao {
     margin-top: 30px;
     margin-left: 20px;
     margin-right: 20px;
@@ -7,7 +7,7 @@
     border: 1px solid rgba(242, 68, 5, 0.33);
 }
 
-.destaques-menu, .promocao-menu {
+.promocao-menu {
     height: 30px;
     border-bottom: 1px solid rgba(242, 68, 5, 0.33);
     display: flex;
@@ -15,7 +15,7 @@
     justify-content: space-between;
 }
 
-.destaques-menu p, .promocao-menu p{
+.promocao-menu p{
     font-family: 'Gentium Book Basic';
     font-style: normal;
     font-size: 16px;
@@ -25,21 +25,21 @@
     color:#FC841A;
 }
 
-.destaques-menu  ul a, .promocao-menu ul a {
+.promocao-menu ul a {
     text-decoration: none;
 }
 
-.lista-destaques-menu, .lista-promocao-menu {
+.lista-promocao-menu {
     display:inline-block;
     margin-right: 2px;
 }
 
-.lista-destaques-menu:nth-child(3), .lista-promocao-menu:nth-child(3){
+.lista-promocao-menu:nth-child(3){
     margin-right: 20px;
 }
 
 
-.lista-destaques-menu a, .lista-promocao-menu a {
+.lista-promocao-menu a {
     font-family: 'Montserrat';
     font-style: normal;
     font-size: 10px;
@@ -52,7 +52,7 @@
 
 }
 
-.lista-destaques-menu a:hover, .lista-promocao-menu a:hover {
+.lista-promocao-menu a:hover {
     color: #F24405;
     text-decoration: underline #F24405;
 }
