--- a/WebSiteFloricultura/css/rodape.css
+++ b/WebSiteFloricultura/css/rodape.css
@@ -1,5 +1,8 @@
 .rodape {
     background-color: #F24405;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
     height: 100px;
     display: flex;
     align-items: center;
