--- a/WebSiteFloricultura/css/rodape.css
+++ b/WebSiteFloricultura/css/rodape.css
@@ -1,7 +1,7 @@
 .rodape {
     background-color: #F24405;
-    position: absolute;
     bottom: 0;
+    position:fixed;
     width: 100%;
     height: 100px;
     display: flex;
