--- a/css/style.css
+++ b/css/style.css
@@ -6,4 +6,4 @@
 @import url(rodape.css);
 @import url(modal.css);
 @import url(cards.css);
-@import url(sessaoBanner.css);
+@import url(secaoBanner.css);
