Atualização do header
- Atualização do botão modo Escuro
- Atualização do header

--- a/css/darkMode.css
+++ b/css/darkMode.css
@@ -1,42 +1,51 @@
 .checkbox {
-    opacity: 0;
-    position: absolute;
-  }
-  
-  .label {
-    background-color: #111;
-    border-radius: 50px;
-    cursor: pointer;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-right: 30px;
-    padding: 5px;
-    position: relative;
-    height: 20px;
-    width: 60px;
-    transform: scale(1.5);
-  
-  }
-  
-  
-  .label .ball {
-    background-color: #fff;
-    border-radius: 50%;
-    position: absolute;
-    top: 2px;
-    left: 2px;
-    height: 15px;
-    width: 15px;
-    transform: translateX(0px);
-    transition: transform 0.2s linear;
-  }
-  
-  .checkbox:checked + .label .ball {
-    transform: translateX(24px);
-  }
-  
-  .fa-moon {
-    color: #f1c40f;
-  }
-  
+  opacity: 0;
+  position: absolute;
+}
+
+.label {
+  background-color: #ffffff;
+  border-radius: 50px;
+  cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-right: 40px;
+  padding: 5px;
+  position: relative;
+  height: 16px;
+  width: 40px;
+  transform: scale(1.5);
+
+}
+
+
+.label .ball {
+  background-color: rgba(255, 119, 0, 0.75);
+  /* background-image: url("../img/abajur_ligado.png"); */
+  border-radius: 50%;
+  position: absolute;
+  top: 1px;
+  left: 2px;
+  height: 14px;
+  width: 16px;
+  transform: translateX(0px);
+  transition: transform 0.2s linear;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.checkbox:checked + .label .ball {
+  transform: translateX(20px);
+  background-color: #ffffff;
+}
+
+.checkbox:checked + .label {
+  background-color: #000000;
+}
+
+
+.fa-sun {
+  color: white;
+}
