--- a/css/style.css
+++ b/css/style.css
@@ -6,4 +6,5 @@
 @import url(rodape.css);
 @import url(modal.css);
 @import url(secaoBanner.css);
-@import url(darkMode.css);
+@import url(botaoDarkMode.css);
+@import url(darkModePag.css);
