--- a/css/header.css
+++ b/css/header.css
@@ -1,4 +1,9 @@
 /*CSS DA SEÇÃO INFORMAÇÕES NO HEADER*/
+body {
+    background-color: #ffffff;
+    transition: 1s;
+}
+
 .caixa-info {
     background-color: rgba(255, 119, 0, 0.75);
     height: 47px;
@@ -123,6 +128,7 @@
     justify-content: center;
     border-left: solid 1px rgba(0, 0, 0, 0.53);
     cursor: pointer;
+    transition: 1s;
 }
 
 .caixaBotao:hover {
