--- a/css/style.css
+++ b/css/style.css
@@ -8,4 +8,4 @@
 @import url(secaoBanner.css);
 @import url(botaoDarkMode.css);
 @import url(darkModePag.css);
-@import url(pagOcasioes.css);
+@import url(pagProdutos.css);
