Atualização Página Ocasiões e produtos
- Colocando o rodapé
- Arrumando a animação do hover e do active no menu de navegação

--- a/css/darkModePag.css
+++ b/css/darkModePag.css
@@ -49,8 +49,8 @@ body.dark {
     transition: 1s;
 }
 
-.lista-menu a:hover.dark {
-    color: #000000;
+.lista-menu .listaHover:hover.dark {
+    color: #000000 !important;
 }
 
 .listaMenuDark.dark {
