Criação da acessibilidade página em inglês

--- a/css/darkModePag.css
+++ b/css/darkModePag.css
@@ -74,7 +74,16 @@ body.dark {
 
 .banner-img.dark {
     background-image: url(../img/imgBannerDark.png);
+}
+
+.bannerIngles.dark{
+    background-image: url(../img/BannerInglesDark.png);
     transition: 1s;
+    transition: 1s;
+    width: 100%;
+    height: 347.64px;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .destaqueBotao-comprar.dark {
