--- a/css/style.css
+++ b/css/style.css
@@ -9,3 +9,4 @@
 @import url(botaoDarkMode.css);
 @import url(darkModePag.css);
 @import url(pagProdutos.css);
+@import url(pagDetalhesProdutos.css);
