--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,4 @@
 @import url(darkModePag.css);
 @import url(pagProdutos.css);
 @import url(pagDetalhesProdutos.css);
+@import url(pagCarrinho.css);
