Criação página de pagamento

--- a/css/style.css
+++ b/css/style.css
@@ -11,3 +11,4 @@
 @import url(pagProdutos.css);
 @import url(pagDetalhesProdutos.css);
 @import url(pagCarrinho.css);
+@import url(pagPagamento.css);
